# archedbrows

./: .dockerignore  .flaskenv  .gitignore  .prettierignore  Caddyfile  Dockerfile  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  server.Dockerfile  taskfile.yml  vite.config.ts  web.Dockerfile
.github/workflows/: build.yml
api/archedbrows/: __init__.py  models.py  routes.py
api/archedbrows/downloader/: __init__.py  common.py
api/archedbrows/downloader/gallery_dl/: __init__.py  metadata.py
api/archedbrows/downloader/yt_dlp/: __init__.py
app/: api.d.ts  app.css  root.tsx  shell.tsx
app/components/Brand/: Brand.module.css  Brand.tsx
app/components/Button/: Button.tsx
app/components/CreatePostButton/: CreatePostButton.tsx
app/components/DeletePostButton/: DeletePostButton.tsx
app/components/MediaObject/: MediaObject.tsx
app/components/PostDisplay/: PostDisplay.tsx
app/components/PostListing/: PostListing.tsx
app/components/brand/: brand.module.css  brand.tsx
app/components/createbutton/: createbutton.tsx
app/components/postlisting/: postlisting.tsx
app/routes/: _index.tsx  posts.$postId.tsx  posts.$postId_.edit.tsx  posts_.create.tsx
migrations/: alembic.ini  env.py
migrations/versions/: 10cce651d71e_distinguish_date_added_and_date_created.py  32ec4859da01_.py  970413d7fe82_initial_migration.py  b8768c58d2cb_use_uuid_for_saved_media_files.py  e4ae3fe10e0f_store_files_and_thumbnails_on_filesystem.py
public/: site.webmanifest
src/archedbrows/: __init__.py  database.py  downloader.py  models.py  posts.py  routes.py
src/archedbrows/downloader/: __init__.py  common.py  util.py
src/archedbrows/downloader/gallery_dl/: __init__.py  _memory.py  metadata.py
src/archedbrows/downloader/gallerydl/: __init__.py  _memory.py  download.py  metadata.py
src/archedbrows/downloader/yt_dlp/: __init__.py  _memory.py  metadata.py
src/archedbrows/static/: style.css
src/archedbrows/templates/: _base.html.jinja  _logo.svg.jinja  _media.html.jinja  edit.html.jinja  index.html.jinja  post.html.jinja
typings/yt_dlp/: YoutubeDL.pyi  __init__.pyi  _misc.pyi  cookies.pyi
typings/yt_dlp/extractor/: common.pyi
typings/yt_dlp/networking/: common.pyi  exceptions.pyi
typings/yt_dlp/utils/: __init__.pyi  _utils.pyi  networking.pyi
vite/: main.js  package-lock.json  package.json  vite.config.js
vite/src/: style.css
