[project]
name = "archedbrows"
dynamic = [ "version" ]
description = "Browse your archived media"
readme = "README.md"
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gallery-dl>=1.28.5",
    "humanize>=4.11.0",
    "types-flask-migrate>=4.1.0.20250112",
    "waitress>=3.0.2",
    "yt-dlp[curl-cffi,default]>=2025.1.26",
]

[project.urls]
Source = "https://github.com/thcrt/archedbrows"
Issues = "https://github.com/thcrt/archedbrows/issues"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/archedbrows/_version.py"

[tool.mypy]
packages = "archedbrows"
strict = true

[[tool.mypy.overrides]]
module = ["gallery_dl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yt_dlp.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "F", # flake8
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "FURB", # refurb
    "UP", # pyupgrade
    "I", # isort
]
