[project]
name = "archedbrows"
dynamic = [ "version" ]
description = "Save text and media. Browse through your archive."
readme = "README.md"
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gallery-dl-bytes>=2.5.0",
    "humanize>=4.11.0",
    "types-flask-migrate>=4.1.0.20250112",
    "waitress>=3.0.2",
    "yt-dlp[curl-cffi,default]>=2025.1.26",
]

[project.urls]
Source = "https://github.com/thcrt/archedbrows"
Issues = "https://github.com/thcrt/archedbrows/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "ruff>=0.9.4",
    "yt-dlp-types>=0.0.14",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/archedbrows/_version.py"

[tool.pyright]
include = ["src"]
strict = ["**/*"]
ignore = ["**/_version.py"]
deprecateTypingAliases = true
reportCallInDefaultInitializer = "information"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "information"

[tool.ruff]
line-length = 100
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "F", # flake8
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "FURB", # refurb
    "UP", # pyupgrade
    "I", # isort
]
